--- a/src/_includes/sections/about/index.njk
+++ b/src/_includes/sections/about/index.njk
@@ -24,7 +24,7 @@
         {# Bio #}
         <div class="prose prose-lg max-w-[65ch]">
           <p class="text-navy-800 opacity-70 font-century leading-relaxed text-lg">
-            {{ currentSection.copy.bio }}
+            {{ currentSection.copy.bio | nl2br | safe }}
           </p>
         </div>
 
@@ -53,7 +53,7 @@
         <div class="relative pl-8 py-6 before:content-[''] before:absolute before:left-0 before:top-0 before:bottom-0 before:w-1 before:bg-gradient-to-b before:from-gold-400 before:to-gold-500 before:rounded-full">
           <div class="absolute left-1 top-4 w-3 h-3 bg-gold-400 rounded-full shadow-sm"></div>
           <blockquote class="text-navy-800 opacity-75 italic font-century leading-relaxed text-lg max-w-[60ch]">
-            "{{ currentSection.copy.micro_story }}"
+            "{{ currentSection.copy.micro_story | nl2br | safe }}"
           </blockquote>
         </div>
         {% endif %}
